add troubleshooting for jvm in jenkins